<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="net.magnetspace.frequency.GUI.MainMenuFragment">

    <!-- TODO: Update blank fragment layout -->

    <ListView
        android:id="@+id/listView"
        style="@android:style/Widget.DeviceDefault.Light.ExpandableListView"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp"
        android:background="@android:drawable/divider_horizontal_dark"
        android:cacheColorHint="?android:attr/colorBackground"
        android:divider="@android:color/background_dark"
        android:dividerHeight="1dp"
        android:listSelector="@android:drawable/dialog_holo_light_frame"
        android:textSize="50dp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button"
        style="@style/custom_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/button2"
        android:layout_alignStart="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:background="@drawable/custom_button"
        android:fontFamily="monospace"
        android:onClick="onDeleteBtn"
        android:text="@string/delete_profile"
        android:textSize="35dp"
        android:textStyle="normal"
        tools:ignore="SpUsage"
        tools:layout_toRightOf="@id/listView" />

    <Button
        android:id="@+id/button2"
        style="@style/custom_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:background="@drawable/custom_button"
        android:fontFamily="monospace"
        android:onClick="onCreateNewListBtn"
        android:text="@string/create_profile"
        android:textSize="35dp"
        android:textStyle="normal"
        tools:ignore="SpUsage"
        tools:layout_toRightOf="@id/listView" />

    <Button
        android:id="@+id/button3"
        style="@style/custom_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_toEndOf="@+id/imageView5"
        android:background="@drawable/custom_button"
        android:fontFamily="monospace"
        android:onClick="onStartBtn"
        android:text="@string/select_profile"
        android:textSize="35dp"
        android:textStyle="normal"
        tools:ignore="SpUsage"
        tools:layout_toRightOf="@id/listView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="94dp"
        android:layout_below="@id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignLeft="@id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="70dp"
        android:layout_toEndOf="@+id/listView"
        android:src="@mipmap/magnetspace"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/listView"
        android:layout_toRightOf="@+id/listView"
        android:src="@android:drawable/dark_header"
        android:visibility="invisible"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="26dp"
        android:text="www.msp-shop.hu"
        android:textSize="30dp" />


</RelativeLayout>
