<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.magnetspace.frequency.GUI.FrequencyPlayerActivity"
    android:focusable="false">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/startPlayingBtn"
        android:background="@drawable/custom_button"
        style="@style/custom_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="OnStartPlayingBtn"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:indeterminateOnly="false"
        android:progress="50"
        style="@style/CustomSeekBar"
        android:layout_above="@+id/space"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/button6"
        android:background="@drawable/custom_button"
        style="@style/custom_btn"
        android:layout_alignTop="@+id/startPlayingBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onBackBtn2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00/0:00"
        android:id="@+id/textView"
        android:textSize="25dp"
        android:layout_above="@+id/seekBar"
        android:layout_alignRight="@+id/seekBar"
        android:layout_alignEnd="@+id/seekBar" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_above="@+id/button6"
        android:layout_centerHorizontal="true"
        android:id="@+id/space" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView2"
        android:textSize="25dp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_above="@+id/seekBar" />

    <net.magnetspace.frequency.GUI.CustomView.VisualizerView
        android:id="@+id/myvisualizerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textView3"
        android:layout_toStartOf="@+id/startPlayingBtn"
        android:layout_toLeftOf="@+id/startPlayingBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:id="@+id/power1"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="setPower1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:id="@+id/power2"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/power1"
        android:layout_toEndOf="@+id/power1"
        android:onClick="setPower2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:id="@+id/power3"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/power2"
        android:layout_toEndOf="@+id/power2"
        android:onClick="setPower3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4"
        android:id="@+id/power4"
        android:layout_alignBottom="@+id/power3"
        android:layout_toRightOf="@+id/power3"
        android:layout_toEndOf="@+id/power3"
        android:onClick="setPower4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5"
        android:id="@+id/power5"
        android:layout_alignBottom="@+id/power4"
        android:layout_toRightOf="@+id/power4"
        android:layout_toEndOf="@+id/power4"
        android:onClick="setPower5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power"
        android:id="@+id/textView3"
        android:layout_above="@+id/power1"
        android:layout_alignLeft="@+id/seekBar"
        android:layout_alignStart="@+id/seekBar"
        android:textSize="25dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView3"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/myvisualizerview"
        android:layout_alignBottom="@+id/myvisualizerview"
        android:layout_toRightOf="@+id/myvisualizerview"
        android:listSelector="#ff9800"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/power5"
        android:layout_toRightOf="@+id/power5"
        android:layout_toEndOf="@+id/power5"
        android:layout_alignTop="@+id/power5"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="www.magnetspace.tv"
        android:id="@+id/textView5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="26dp" />


</RelativeLayout>
